@@ -45,6 +45,9 @@ The Grinder 3.4 (not yet released)
 
    Fix bug 2947509 - Improve algorithm that finds agent jar.
 
+   Fix bug 2952023 - Cookie.parse should recognise "httponly"(lower
+   case). Thanks to amachang for the report and the patch.
+
 
 The Grinder 3.3
 ---------------
